@@ -1,3 +1,5 @@
+* Remove browser sniffs in Selector.handlers "mark" and "concat". [jddalton, kangax]
+
 * Remove browser sniffs for Safari's $A() and Opera's Array#concat redeclaration. [jddalton, kangax]
 
 * Remove IE code related to "fixed" positioned elements because IE doesn't support "fixed" elements. [jddalton]
